--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
 		"nette/di": "^3.0",
 		"nette/utils": "^3.0",
 		"doctrine/orm": "^2.6",
-		"kdyby/events": "^4.0"
+		"doctrine/annotations": "^1.13"
 	},
 	"require-dev": {
 		"nette/tester": "^2.2",
-		"tracy/tracy": "^2.6"
+		"tracy/tracy": "^2.6",
+		"symfony/cache": "^6.0"
 	},
 	"autoload": {
 		"psr-4": {
